# adc-backend

./: .gitignore  Dockerfile  Makefile  README.md  cvar.txt  cvar_math_v2.txt  cvar_u8.txt  dlogs.txt  dlogs_u8.txt  docker-compose.yml  evaluate.py  ewc.txt  ewc_math_results.txt  ewc_math_v2.txt  ewc_u8.txt  int_out.txt  int_out_u8.txt  int_tests.txt  int_tests_u8.txt  integration_errs.txt  integration_errs_2.txt  integration_results_v2.txt  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_init.py  test_out_u8.txt  unit_results_v2.txt  unit_test_results_utf8.txt
agents/: __init__.py  adversarial_trainer.py  base_agent.py  continual_learner.py  cvar_optimizer.py  cvar_ppo.py  ewc.py  perturbation.py  registry.py
api/: __init__.py  app.py  dependencies.py
auth/: __init__.py  guards.py  jwt_handler.py  models.py  password.py  router.py
cache/: __init__.py  decorators.py  keys.py  redis_client.py
db/: __init__.py  base.py  session.py
drift/: __init__.py  base_detector.py  detector_factory.py  ks_detector.py  mmd_detector.py  wasserstein_detector.py  window_manager.py
envs/: __init__.py  action_space.py  cyborg_wrapper.py  drift_injector.py  env_factory.py  multi_env.py  observation_space.py  reward_shaper.py  scenario_loader.py
explainability/: __init__.py  explanation_builder.py  react_agent.py  report_generator.py
game/: __init__.py  attacker_model.py  belief_updater.py  game_metrics.py  nash_solver.py  stochastic_game.py
knowledge/: __init__.py  bert_mapper.py  cache.py  kg_builder.py  kg_features.py  kg_queries.py  mitre_parser.py  (+3 more)
(+86 files in other folders)
